--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,7 +15,7 @@
         <div class="container">
 
             <header>
-                <img class="d-block mx-auto" src="{{ asset('images/logo_neutre.jpg') }}" alt="Image bandeau du site 'Ludo et Sophie'">
+                <a href="{{ path('home') }}" title="Ludo et Sophie : Acceuil"><img class="d-block mx-auto" src="{{ asset('images/logo_neutre.jpg') }}" alt="Image bandeau du site 'Ludo et Sophie'"></a>
                 <h1 class="text-center" >Ludo et Sophie - Bienvenue dans l'administration du site</h1>
             </header>
 
