Formulaires message et avis dans page produit ok;

--- a/templates/home/products.html.twig
+++ b/templates/home/products.html.twig
@@ -59,7 +59,7 @@
 						<a href="#tab-reserver" data-toggle="tab" class="text-decoration-none">Réserver</a>
 					</li>
 					<li class="p-3">
-						<a href="#tab-review" data-toggle="tab" class="text-decoration-none">Avis (0)</a>
+						<a href="#tab-review" data-toggle="tab" class="text-decoration-none">Avis ({{ moderatedComments|length }})</a>
 					</li>
 				</ul>
 				<div class="tab-content mt-3">
@@ -86,11 +86,31 @@
 						</table>
 						
 					</div>
-					<div class="tab-pane" id="tab-review">
-						hello3
-					</div>
 					<div class="tab-pane" id="tab-reserver">
-						hello4
+                        {{ include('home/_formMessages.html.twig') }}
+					</div>
+					<div class="tab-pane" id="tab-review">
+                        {# {{ include('home/_formMessages.html.twig') }} #}
+
+						{% for comment in moderatedComments %}
+						<div class="card card-primary card-outline mt-2">
+							<div class="card-body">
+								<p class="card-title font-italic m-0">
+									<span class="font-weight-bold">{{ comment.pseudo }}</span>
+									le
+									{{ comment.createdAt|date('d-m-Y H:i:s') }}
+								</p>
+								<p class="card-text m-0">
+									{{ comment.content }}
+								</p>
+							</div>
+							<!-- /.card -->
+						</div>
+						{% else %}
+							<p>Il n'y a pas d'avis pour cet évènement.</p>
+						{% endfor %}
+
+						{{ include('comments/_form.html.twig') }}
 					</div>
 				</div>
 
@@ -105,4 +125,7 @@
 	
 
 
+{% endblock %}
+{% block javascripts %}
+<script src="{{ asset('js/disableInput.js') }}"></script>
 {% endblock %}
