--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -123,29 +123,7 @@
                         </div>
                     </div>
                     <div class="col-md-9">
-                        <form class="row" method="post" action="{{ path('send_email') }}" >
-                            <div class="col-md-4">
-                                <input type="hidden" name="nosiar">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" name="name" placeholder="Nom" required>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" name="email" placeholder="Email" required>
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" class="form-control" name="phone" placeholder="Téléphone" required>
-                                </div>                        
-                            </div>
-                            <div class="col-md-8">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" name="subject" placeholder="Objet de votre message" required>
-                                </div>
-                                <div class="form-group">
-                                    <textarea class="form-control" name="message" placeholder="Écrivez votre message ici" required></textarea>
-                                </div>
-                                <button type="submit" class="btn btn-light">Envoyer</button>              
-                            </div>
-                        </form>  
+                        {{ include('_formMessages.html.twig') }}
                     </div>
                 </div>
 
