--- a/templates/comments/show.html.twig
+++ b/templates/comments/show.html.twig
@@ -56,6 +56,12 @@
 						</td>
 					</tr>
 					<tr>
+						<th>Note donnée pour le produit concerné</th>
+						<td>
+							{{ (comment.mark != null)?(comment.mark ~'/5'):'Pas de note donnée pour ce produit.' }}
+						</td>					
+					</tr>
+					<tr>
 						<th>Contenu</th>
 						<td>{{ comment.content }}</td>
 					</tr>
