--- a/templates/base-admin.html.twig
+++ b/templates/base-admin.html.twig
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="{{ asset('images/logo_neutre.jpg') }}" type="image/x-icon">
         <title>{% block title %}Ludo et Sophie{% endblock %}</title>
         
         <!-- Font Awesome Icons -->
