--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" sizes="166x94" href="{{ asset('images/logo_neutre.jpg') }}" type="image/x-icon">
+        <link rel="shortcut icon" href="{{ asset('images/logo_neutre.jpg') }}" type="image/x-icon">
         <title>Ludo et Sophie - Connection administration</title>
 
         {# Chargement CDNs #}
