--- a/templates/categories/_form.html.twig
+++ b/templates/categories/_form.html.twig
@@ -23,7 +23,7 @@
 
         </div>
 
-        <button type="button" class="add-another-image-collection-widget" data-list-selector="#images-fields-list">Ajouter une image
+        <button type="button" class="add-another-image-collection-widget" data-list-selector="#images-fields-list"><i class="fas fa-plus"></i> Ajouter une image
         </button>
 
 </fieldset>
