--- a/templates/form/selecttext.html.twig
+++ b/templates/form/selecttext.html.twig
@@ -1,4 +1,4 @@
-{% block datalist_widget %}
+{% block selecttext_widget %}
 	<div class="form-group d-block">
 		<div class="row">
 			<div class="col-6">
