--- a/templates/pages/show.html.twig
+++ b/templates/pages/show.html.twig
@@ -89,7 +89,7 @@
 
 			<a href="{{ path('pages_index') }}" class="btn btn-primary">Retour à la liste des publications</a>
 
-			<a href="{{ path('pages_edit', {'id': page.id}) }}" class="btn btn-warning" >Modifier</a>
+			<a href="{{ path('pages_edit', {'id': page.id}) }}" class="btn btn-warning" ><i class="fas fa-edit"></i></a>
 
 			{{ include('pages/_delete_form.html.twig') }}
 		</div>
