--- a/templates/products/_form.html.twig
+++ b/templates/products/_form.html.twig
@@ -29,7 +29,9 @@
 
 	</div>
 
-	<a href="#" class="add-another-image-collection-widget" data-list-selector="#images-fields-list">Ajouter une image
+	<a href="#" class="add-another-image-collection-widget" data-list-selector="#images-fields-list">
+		<i class="fas fa-plus"></i>
+		Ajouter une image
 	</a>
 
 </fieldset>
@@ -51,11 +53,12 @@
 
 	</div>
 
-	<a href="#" class="add-another-category-collection-widget" data-list-selector="#categories-fields-list">Ajouter une catégorie
+	<a href="#" class="add-another-category-collection-widget" data-list-selector="#categories-fields-list">
+		<i class="fas fa-plus"></i>
+		Ajouter une catégorie
 	</a>
 
 </fieldset>
-
 
 
 <fieldset class="form-group">
@@ -70,7 +73,7 @@
 						<a href="#" class="float-right">Enlever l'attribut du produit ?</a>
 						{{ form_row(attribute.attribute_group) }}
 						{{ form_row(attribute.name) }}
-						{{ form_row(attribute.value) }}				
+						{{ form_row(attribute.value) }}
 					</div>
 				</li>
 				{% set counter = counter + 1 %}
@@ -79,7 +82,9 @@
 
 	</div>
 
-	<a href="#" class="add-another-attribute-collection-widget" data-list-selector="#attribute-fields-list">Ajouter un attribut
+	<a href="#" class="add-another-attribute-collection-widget" data-list-selector="#attribute-fields-list">
+		<i class="fas fa-plus"></i>
+		Ajouter un attribut
 	</a>
 
 </fieldset>
