--- a/templates/attribute_groups/_delete_form.html.twig
+++ b/templates/attribute_groups/_delete_form.html.twig
@@ -6,7 +6,7 @@
 
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteAttributeGroup{{ attribute_group.id }}ModalCenter">
-    Supprimer
+   <i class="fas fa-trash"></i>
 </button>
 
 <!-- Modal -->
