--- a/templates/base-admin.html.twig
+++ b/templates/base-admin.html.twig
@@ -12,7 +12,8 @@
         <link rel="stylesheet" href="{{ asset('adminlte/dist/css/adminlte.min.css') }}">
         <!-- Google Font: Source Sans Pro -->
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
-        
+        <!-- Styles css supplémentaires -->
+        <link rel="stylesheet" href="{{ asset('css/admin-styles.css') }}">        
         
         
         {% block stylesheets %}{% endblock %}
