--- a/templates/categories/_delete_form.html.twig
+++ b/templates/categories/_delete_form.html.twig
@@ -6,7 +6,7 @@
 
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteCategory{{ category.id }}ModalCenter">
-    Supprimer
+   <i class="fas fa-trash"></i>
 </button>
 
 <!-- Modal -->
