--- a/templates/categories/index.html.twig
+++ b/templates/categories/index.html.twig
@@ -85,16 +85,16 @@
 							<td>{{ category.updatedAt|date('d-m-Y H:i:s') }}</td>
 							<td>{{ category.products | length }}
 								{% if category.products | length > 0 %}
-									<a title="Voir les produits associés à cette catégorie" href="{{ path('products_index', {categoryId:category.id}) }}" class="btn btn-primary" >Voir</a>
+									<a title="Voir les produits associés à cette catégorie" href="{{ path('products_index', {categoryId:category.id}) }}" class="btn btn-primary" ><i class="fas fa-glasses"></i></a>
 								{% endif %}
 							</td>
 							<td>
-								<a href="{{ path('categories_show', {'id': category.id}) }}" class="btn btn-primary" >Voir</a>
-								<a href="{{ path('categories_edit', {'id': category.id}) }}" class="btn btn-warning" >Modifier</a>
-								{{ include('categories/_delete_form.html.twig') }}
+								{{ category.slug }}
 							</td>
 							<td>
-								{{ category.slug }}
+								<a href="{{ path('categories_show', {'id': category.id}) }}" class="btn btn-primary" ><i class="fas fa-glasses"></i></a>
+								<a href="{{ path('categories_edit', {'id': category.id}) }}" class="btn btn-warning" ><i class="fas fa-edit"></i></a>
+								{{ include('categories/_delete_form.html.twig') }}
 							</td>
 						</tr>
 					{% else %}
