--- a/templates/comments/_delete_form.html.twig
+++ b/templates/comments/_delete_form.html.twig
@@ -7,7 +7,7 @@
 
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteComment{{ comment.id }}ModalCenter">
-    Supprimer
+   <i class="fas fa-trash"></i>
 </button>
 
 <!-- Modal -->
