--- a/templates/comments/edit.html.twig
+++ b/templates/comments/edit.html.twig
@@ -32,7 +32,7 @@
 	<div class="content">
 		<div class="container-fluid">
 
-			{{ include('comments/_form.html.twig', {'button_label': 'Modifier'}) }}
+			{{ include('comments/_form.html.twig', {'button_label': 'Modérer'}) }}
 
 			<a href="{{ path('comments_index') }}" class="btn btn-primary" >Retour à la liste</a>
 
