--- a/templates/comments/index.html.twig
+++ b/templates/comments/index.html.twig
@@ -103,7 +103,7 @@
 								{{ (comment.isModerated)?'Oui':'Non' }}
 							</td>
 							<td>
-								<a href="{{ path('comments_show', {'id': comment.id}) }}" class="btn btn-primary" >Voir</a>
+								<a href="{{ path('comments_show', {'id': comment.id}) }}" class="btn btn-primary" ><i class="fas fa-glasses"></i></a>
 								<a href="{{ path('comments_edit', {'id': comment.id}) }}" class="btn btn-warning">Modérer</a>
 								{{ include('comments/_delete_form.html.twig') }}
 							</td>
