--- a/templates/frequently_asked_questions/show.html.twig
+++ b/templates/frequently_asked_questions/show.html.twig
@@ -24,7 +24,7 @@
 
     <a href="{{ path('frequently_asked_questions_index') }}" class="btn btn-primary">Retour à la liste</a>
 
-    <a href="{{ path('frequently_asked_questions_edit', {'id': frequently_asked_question.id}) }}" class="btn btn-warning" >Modifier</a>
+    <a href="{{ path('frequently_asked_questions_edit', {'id': frequently_asked_question.id}) }}" class="btn btn-warning" ><i class="fas fa-edit"></i></a>
 
     {{ include('frequently_asked_questions/_delete_form.html.twig') }}
 {% endblock %}
