--- a/templates/pages/_delete_form.html.twig
+++ b/templates/pages/_delete_form.html.twig
@@ -6,7 +6,7 @@
 
 <!-- Button trigger modal -->
 <button class="btn btn-danger" data-toggle="modal" data-target="#deletePage{{ page.id }}ModalCenter">
-  Supprimer
+  <i class="fas fa-trash"></i>
 </button>
 
 <!-- Modal -->
