--- a/templates/people/_delete_form.html.twig
+++ b/templates/people/_delete_form.html.twig
@@ -7,7 +7,7 @@
 
 <!-- Button trigger modal -->
 <button class="btn btn-danger" data-toggle="modal" data-target="#deletePeople{{ person.id }}ModalCenter">
-  Supprimer
+  <i class="fas fa-trash"></i>
 </button>
 
 <!-- Modal -->
