--- a/templates/people/index.html.twig
+++ b/templates/people/index.html.twig
@@ -73,8 +73,8 @@
                         <td>{{ person.function }}</td>
                         <td>{{ person.isHead ? 'Oui' : 'Non' }}</td>
                         <td>
-                            <a href="{{ path('people_show', {'id': person.id}) }}" class="btn btn-primary" >Voir</a>
-                            <a href="{{ path('people_edit', {'id': person.id}) }}" class="btn btn-warning" >Modifier</a>
+                            <a href="{{ path('people_show', {'id': person.id}) }}" class="btn btn-primary" ><i class="fas fa-glasses"></i></a>
+                            <a href="{{ path('people_edit', {'id': person.id}) }}" class="btn btn-warning" ><i class="fas fa-edit"></i></a>
                             {{ include('people/_delete_form.html.twig') }}
                         </td>
                     </tr>
