--- a/templates/people/show.html.twig
+++ b/templates/people/show.html.twig
@@ -73,7 +73,7 @@
 
         <a href="{{ path('people_index') }}" class="btn btn-primary" >Retour à la liste</a>
 
-        <a href="{{ path('people_edit', {'id': person.id}) }}" class="btn btn-warning">Editer</a>
+        <a href="{{ path('people_edit', {'id': person.id}) }}" class="btn btn-warning"><i class="fas fa-edit"></i></a>
 
         {{ include('people/_delete_form.html.twig') }}
 
